force-app/main/default/objects/custom_create219__c/custom_create219__c.object-meta.xml
<CustomObject>
    <label>Custom created object219</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects219</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>