force-app/main/default/objects/custom_create219__c/fields/custom_create_219field505__c.field-meta.xml
<CustomField>
    <fullName>custom_create_219field505__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 219field505</label>
    <type>Checkbox</type>
</CustomField>