force-app/main/default/objects/custom_create219__c/fields/custom_create_219field541__c.field-meta.xml
<CustomField>
    <fullName>custom_create_219field541__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 219field541</label>
    <type>Checkbox</type>
</CustomField>